# boot_sector_c

./: .clangd  .gitignore  MEMORY_MAP.txt  boot.asm  c_subset.md  calc_ident.rs  consts.asm  fs_impl.c  int_tests.c  new_boot_sector.asm  program.c  program_fragments.c  program_notes.org
.github/: FUNDING.yml
bin_to_code/: Cargo.toml
bin_to_code/src/: main.rs
bin_transfer/: Cargo.toml
bin_transfer/src/: main.rs
boot/: boot.asm  consts.asm  fs_impl.c  new_boot_sector.asm
notes/: FAT16_layout.txt  MEMORY_MAP.txt  c_subset.md  fragments.c  interrupts.org  line_editor.txt  program.org  program.txt  program_notes.org
programs/: LONGC.C
scripts/: build.fish  dbg.fish  gdb_start.fish  init.fish  mount_qemu_fs.fish  new_boot_sector.fish  run.fish  sync.fish  transfer_hardware.fish
utils/: Cargo.toml
utils/src/: main.rs
