[package]
name = "bin_to_code"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "4.0.0"
log = "0.4.0"
simple_logger = { version = "5.0.0", default-features = false, features = [ "colors", "threads", "nightly" ] }
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
