[package]
name = "bin_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
owo-colors = "4.0.0"
log = "0.4.0"
env_logger = "0.11.0"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
